# Policy-Weaver

./: .gitignore  README.md  adls_test.py  config.yaml  databricks_test.py  dataverse_test.py  hello.py  pyproject.toml  requirements.txt  setup.py  snowflake_test.py  tests.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  how-do-i---.md
.github/workflows/: gh-pages.yml  python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  policyweaver.core.api.fabric.rst  policyweaver.core.api.microsoftgraph.rst  policyweaver.core.api.rest.rst  policyweaver.core.api.rst  policyweaver.core.auth.rst  policyweaver.core.common.rst  policyweaver.core.conf.rst  (+14 more)
examples/: __init__.py  basic_usage.py
getting started/: 0_prerequisites.md  1_walk-through instructions.md
getting_started/: 0_prerequisites.md  1_walk-through instructions.md  1_walkthrough_instructions.md
policy_weaver.egg-info/: PKG-INFO
policystore/: accesspolicy.json
policyweaver/: config.json  policystore.py  policyweaver.py  snowflake.ipynb  weaver.py  weavercore.py
src/: __init__.py  bigquery_client.py  config.py  queries.py  utils.py
tests/: test_dataverse_basic_owner_isolation.py  test_dataverse_business_unit_query_filter.py  test_dataverse_cls_isolation.py  test_dataverse_config_validation.py  test_dataverse_dedupe_scenarios.py  test_dataverse_depth_precedence.py  test_dataverse_permission_object_resolution.py  test_dataverse_rls_toggle_override.py  test_dataverse_role_naming_context.py  test_dataverse_row_filter_columns.py
(+32 files in other folders)
