[project]
name = "policy-weaver"
version = "0.1.0"
description = "Policy Weaver for Microsoft Fabric"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.19.0",
    "databricks-sdk>=0.40.0",
    "msgraph-sdk>=1.16.0",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
]
license = {text = "MIT License"}
keywords = ["Fabric", "Fabric Access Policy", "Databricks", "BigQuery", "Snowflake"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/microsoft/Policy-Weaver"
Documentation = "https://github.com/microsoft/Policy-Weaver/blob/main/docs/PolicyWeaver.md"
Repository = "https://github.com/microsoft/Policy-Weaver.git"
Issues = "https://github.com/microsoft/Policy-Weaver/issues"